# monorepo

./:  .gitlab-ci.yml  .gitignore  .gitlab-ci.yml  CLAUDE.md  CLAUDE.md.new  DESIGN.md  Dockerfile  Makefile  README.md  REFACTORING_SUMMARY.md  config.toml  cyber_mega_phone.js  docker-compose.dev.yml  go.mod  go.sum  go__.mod  index.html  index.php  package-lock.json  package.json
.circleci/: config.yml  config_continue copy.yml  config_continue.yml  config_work.yml
.claude/: settings.json
.githooks/: pre-commit
api/: api.go  api_test.go  main.go
asterisk_config/: alembic.ini
bin-agent-manager/: .gitignore  .gitlab-ci.yml  CLAUDE.md  Dockerfile  README.md  go.mod  go.sum
bin-ai-manager/: .gitignore  .gitlab-ci.yml  CLAUDE.md  Dockerfile  README.md  go.mod  go.sum
bin-api-manager/: .gitignore  CLAUDE.md  Dockerfile  README.md  go.mod  go.sum
bin-billing-manager/: CLAUDE.md  Dockerfile  README.md  go.mod  go.sum
bin-call-manager/: .gitignore  CLAUDE.md  Dockerfile  README.md  go.mod  go.sum
bin-campaign-manager/: CLAUDE.md  Dockerfile  README.md  go.mod  go.sum
bin-chat-manager/: CLAUDE.md  Dockerfile  LICENSE  README.md  go.mod  go.sum
bin-chatbot-manager/: .gitignore  Dockerfile  README.md  go.mod  go.sum
bin-common-handler/: .gitignore  .gitlab-ci.yml  CLAUDE.md  README.md  go.mod  go.sum
bin-pipecat-manager/scripts/pipecat/: common.py  conftest.py  main.py  main.py_  messages.json  pyproject.toml  pyproject.toml_  requirements.txt  routing_base.py  routing_llm.py  routing_stt.py  routing_tts.py  run.py  run.py_org  task.py  team_flow.py  test_build_vad_params.py  test_flush_audio.py  test_init_pipeline.py  test_routing.py  test_routing_llm.py  test_routing_stt.py  test_routing_tts.py  test_run.py  test_team_flow.py  test_tools.py  tools.py
(+9360 files in other folders)
