[project]
name = "pipecat-runner"
version = "0.1.0"
description = "Pipecat AI voice pipeline runner"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv",
    "uvicorn",
    "pipecat-ai[silero,deepgram,openai,cartesia,websocket,google,local-smart-turn]>=1.4.0",
    "pipecat-ai-flows>=1.2.0",
    "onnxruntime>=1.24.3",
    "pillow>=12.1.1",
    "protobuf>=5.29.6",
    "loguru",
]
